// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match con el snap GifExpertApp/> 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul />
</Fragment>
`;

exports[`match con el snap muestra lista de categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul>
    <GifGrid
      categorie="one punch"
      key="one punch"
    />
    <GifGrid
      categorie="dragon ball"
      key="dragon ball"
    />
  </ul>
</Fragment>
`;
